@@ -1,4 +1,5 @@
 [easy_install]
+zip_ok = false
 index_url = http://dist.repoze.org/lemonade/dev/simple
 
 [nosetests]
